fix kafka import of users and property changes
